--- a/ProjetoFinal/ProjetoFinal/Web.config
+++ b/ProjetoFinal/ProjetoFinal/Web.config
@@ -6,7 +6,7 @@
   -->
 <configuration>
 	<connectionStrings>
-		<add name="ProjetoFinalConnectionString" connectionString="Data Source=DESKTOP-H4DBHOI\MSSQLSERVER01;Initial Catalog=ProjFinal;Integrated Security=True"
+		<add name="ProjetoFinalConnectionString" connectionString="workstation id=projFinal.mssql.somee.com;packet size=4096;user id=projetoFinal_SQLLogin_1;pwd=uiwkjmq3h8;data source=projFinal.mssql.somee.com;persist security info=False;initial catalog=projFinal"
 		  providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <system.web>
