--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Login\AccountUpdate.aspx" />
     <Content Include="Login\css\style.css" />
     <Content Include="Login\fonts\material-icon\css\material-design-iconic-font.css" />
     <Content Include="Login\fonts\material-icon\css\material-design-iconic-font.min.css" />
@@ -92,6 +93,8 @@
     <Content Include="Login\images\signup-image.jpg" />
     <Content Include="Login\js\main.js" />
     <Content Include="Login\Login.aspx" />
+    <Content Include="Login\NewPassRecovery.aspx" />
+    <Content Include="Login\PassRecovery.aspx" />
     <Content Include="Login\singUp.aspx" />
     <Content Include="Login\singUpCont.aspx" />
     <Content Include="notas.aspx" />
@@ -100,14 +103,36 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\FunctionClasses\DBConnections.cs" />
+    <Compile Include="Classes\FunctionClasses\EmailSending.cs" />
     <Compile Include="Classes\FunctionClasses\PassEncrypt.cs" />
     <Compile Include="Classes\ObjectClasses\Utilizador.cs" />
+    <Compile Include="Login\AccountUpdate.aspx.cs">
+      <DependentUpon>AccountUpdate.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login\AccountUpdate.aspx.designer.cs">
+      <DependentUpon>AccountUpdate.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Login\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Login\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Login\NewPassRecovery.aspx.cs">
+      <DependentUpon>NewPassRecovery.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login\NewPassRecovery.aspx.designer.cs">
+      <DependentUpon>NewPassRecovery.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Login\PassRecovery.aspx.cs">
+      <DependentUpon>PassRecovery.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login\PassRecovery.aspx.designer.cs">
+      <DependentUpon>PassRecovery.aspx</DependentUpon>
     </Compile>
     <Compile Include="Login\singUp.aspx.cs">
       <DependentUpon>singUp.aspx</DependentUpon>
