--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -504,6 +504,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Imagens\produto\" />
     <Folder Include="Imagens\utilizadores\" />
     <Folder Include="PDF\" />
   </ItemGroup>
