--- a/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
+++ b/ProjetoFinal/ProjetoFinal/ProjetoFinal.csproj
@@ -525,6 +525,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="FrontEnd\" />
     <Folder Include="PDF\" />
   </ItemGroup>
   <PropertyGroup>
